0026230: Segmentation fault because a NULL curve is used without precaution in case of a projection failure